--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -29,8 +29,8 @@
       <header>
         <h1>{{ page.title }}</h1>
         <p></p>
-		<p class="view"><a href="./index.html">syllabus</a></p>
-		<p class="view"><a href="./schedule.html">schedule</a></p>
+		<p class="view"><a href="./syllabus/syllabus.html">syllabus</a></p>
+		<p class="view"><a href="./schedule/schedule.html">schedule</a></p>
 		<p class="view"><a href="./announcement.html">announcements</a></p>
       </header>
       
