--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -29,9 +29,9 @@
       <header>
         <h1>{{ page.title }}</h1>
         <p></p>
-		<p class="view"><a href="./syllabus/syllabus.html">syllabus</a></p>
-		<p class="view"><a href="./schedule/schedule.html">schedule</a></p>
-		<p class="view"><a href="./announcement.html">announcements</a></p>
+		<p class="view"><a href="https://ucla-biostat-200c-2020spring.github.io/syllabus/syllabus.html">syllabus</a></p>
+		<p class="view"><a href="https://ucla-biostat-200c-2020spring.github.io/schedule/schedule.html">schedule</a></p>
+		<p class="view"><a href="https://ucla-biostat-200c-2020spring.github.io/announcement.html">announcements</a></p>
       </header>
       
       <section>
